--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@capacitor/cli": "^7.4.4",
     "@capacitor/core": "^7.4.4",
     "@capacitor/ios": "^7.4.4",
+    "@codetrix-studio/capacitor-google-auth": "3.4.0-rc.4",
     "@hookform/resolvers": "^3.10.0",
     "@number-flow/react": "^0.5.10",
     "@radix-ui/react-accordion": "^1.2.11",
