--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     implementation project(':capacitor-cordova-android-plugins')
+    implementation "androidx.health.connect:connect-client:1.2.0-alpha02"
 }
 
 apply from: 'capacitor.build.gradle'
