--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@capacitor/app": "^8.0.0",
     "@capacitor/cli": "^7.4.4",
     "@capacitor/core": "^7.4.4",
+    "@capacitor/filesystem": "^8.0.0",
     "@capacitor/ios": "^7.4.4",
+    "@capacitor/share": "^8.0.0",
     "@capacitor/status-bar": "^8.0.0",
     "@codetrix-studio/capacitor-google-auth": "3.4.0-rc.4",
     "@hookform/resolvers": "^3.10.0",
@@ -57,6 +59,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
+    "html2canvas": "^1.4.1",
     "i18next": "^25.7.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
