--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@capacitor/filesystem": "^8.0.0",
     "@capacitor/ios": "^7.4.4",
     "@capacitor/preferences": "^8.0.0",
+    "@capacitor/screen-orientation": "^8.0.0",
     "@capacitor/share": "^8.0.0",
     "@capacitor/status-bar": "^8.0.0",
     "@codetrix-studio/capacitor-google-auth": "3.4.0-rc.4",
