--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "framer-motion": "^12.23.24",
     "html2canvas": "^1.4.1",
     "i18next": "^25.7.1",
+    "i18next-browser-languagedetector": "^8.2.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
