[dyad] Corrección del nombre del paquete de la aplicación para el inicio de sesión - wrote 4 file(s), renamed 1 file(s)

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.application'
 
 android {
-    namespace "com.calorel.app"
+    namespace "com.calorelapp.app"
     compileSdk rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "com.calorel.app"
+        applicationId "com.calorelapp.app"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
