--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@capacitor/screen-orientation": "^8.0.0",
     "@capacitor/share": "^8.0.0",
     "@capacitor/status-bar": "^8.0.0",
-    "@capacitor-community/google-auth": "^2.0.2",
+    "@codetrix-studio/capacitor-google-auth": "3.4.0-rc.4",
     "@hookform/resolvers": "^3.10.0",
     "@number-flow/react": "^0.5.10",
     "@radix-ui/react-accordion": "^1.2.11",
