--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/core": "^7.4.4",
     "@capacitor/filesystem": "^8.0.0",
     "@capacitor/ios": "^7.4.4",
+    "@capacitor/local-notifications": "^8.0.0",
     "@capacitor/preferences": "^8.0.0",
     "@capacitor/screen-orientation": "^8.0.0",
     "@capacitor/share": "^8.0.0",
