--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-        <string>nutrisnap-health-hub</string>
+	<string>Calorel</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -22,6 +22,12 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Calorel necesita acceso a la cámara para escanear tus alimentos y analizar sus nutrientes.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Calorel necesita permiso para guardar imágenes de tus logros y comidas para compartir.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Calorel necesita acceso a tu galería para analizar fotos de comida guardadas.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
