--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,12 +4,20 @@
   "icons": [
     {
       "src": "app-icon.png",
-      "sizes": "64x64 32x32 24x24 16x16 192x192 512x512",
-      "type": "image/png"
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "app-icon.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#10b981",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "orientation": "portrait"
 }
