--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-joyride": "^2.9.3",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
+    "react-use": "^17.6.0",
     "recharts": "^3.5.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
