--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,7 +17,7 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#10b981",
+  "theme_color": "#65a30d",
   "background_color": "#ffffff",
   "orientation": "portrait"
 }
